--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react": "17.0.2",
     "react-icons": "^4.3.1",
     "react-native": "0.68.2",
+    "react-native-circular-progress": "^1.3.7",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-storage": "^1.0.1",
+    "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
     "redux-logger": "^3.0.6",
