--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "iphone": "react-native run-ios --device 'iPhone XR'"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/netinfo": "^7.1.7",
     "@react-native-community/push-notification-ios": "^1.10.1",
+    "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -27,6 +29,7 @@
     "react-icons": "^4.3.1",
     "react-native": "0.68.2",
     "react-native-circular-progress": "^1.3.7",
+    "react-native-date-picker": "^4.2.2",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-push-notification": "^8.1.1",
